# dlcourse_ai

./: .gitignore  pyproject.toml
assignments/assignment1/: KNN.ipynb  knn.py  metrics.py
